Wizard: no comments

--- a/gtpb_clientside/resources/modalFramework/modalFramework.css
+++ b/gtpb_clientside/resources/modalFramework/modalFramework.css
@@ -111,6 +111,10 @@ div#_md_blank div#_md_dialog div#_md_content {
   overflow:auto;
 }
 
+div#_md_blank div#_md_dialog div#_md_content .add_comment_row {
+  display: none;
+}
+
 div#_md_blank div#_md_dialog div#_md_content h1 {
   font-family:"Trebuchet MS";
 }
