--- a/gtpb_clientside/resources/tree/tree.css
+++ b/gtpb_clientside/resources/tree/tree.css
@@ -51,6 +51,13 @@ li#setup h2 {
 	border-radius: 0;
 }
 
+span.notification {
+  font-size: 60%;
+  font-weight: bold;
+  background-color: white;
+  border-radius: 0.5em;
+}
+
 h2 span {
 	padding-left: 20px;
 	background-position: left;
@@ -58,14 +65,17 @@ h2 span {
 	text-transform: capitalize;
 }
 
+/*
 .moduleexpanded h2 span {
 	background-image: url(tree/collapse.png);
 }
+*/
 
- /*
+/*
 .modulecollapsed h2 span {
 	background-image: url(tree/expand.png);
-} */
+}
+*/
 
 h2 img{
 	vertical-align: middle;
