--- a/gtpb_clientside/resources/tree/tree.css
+++ b/gtpb_clientside/resources/tree/tree.css
@@ -61,6 +61,13 @@ span.notification {
   background-color: rgba(255,255,255,0.5);
   border-radius: 0.5em;
   padding: 0.25em;
+  -moz-transition-duration: 10s;
+  -moz-transition-timing-function: ease-out;
+  -moz-transition-property: opacity;
+}
+
+span.notification.going {
+  opacity: 0;
 }
 
 h2 span {
