--- a/gtpb_clientside/WEB-INF/templates/gui/printouts/record.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/printouts/record.vm
@@ -58,7 +58,7 @@
     <script type="text/javascript" src="resources/jquery.oembed.js"></script>
     #parse('gui/resources/google_maps_api_key.vm')
 	#if($google_maps_api_key)
-    <script src="http://maps.google.com/maps?file=api&v=2&key=$google_maps_api_key&sensor=false" type="text/javascript"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?key=$google_maps_api_key&sensor=false" type="text/javascript"></script>
 	#end
     <script type="text/javascript" src="resources/tabs/tabs.js"></script>
     <script type="text/javascript" src="resources/tabs/view.js"></script>
