--- a/gtpb_clientside/resources/tree/tree.css
+++ b/gtpb_clientside/resources/tree/tree.css
@@ -80,7 +80,7 @@ span.notification.going {
 }
 
 h2 span {
-	padding-left: 20px;
+	/* padding-left: 20px; */
 	background-position: left;
 	background-repeat: no-repeat;
 	text-transform: capitalize;
@@ -100,6 +100,7 @@ h2 span {
 
 h2 img{
 	vertical-align: middle;
+	margin-right: 0.25em;
 }
 
 .expandable {
