--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_grandchild_blocks.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_grandchild_blocks.vm
@@ -22,19 +22,22 @@
 #set($gcParentTable = $sessionTable)
 #set($sessionTableInternalName = $sessionTable.getInternalTableName())
 #set($lookupRowId = true) ## Used by tab_selector_report
+#if(!$formTab)
+  <h1>Parent table is $parentTable</h1>
+#end
 #foreach($gcFormTab in $gcFormTabs)
   #set($selectorReport = $gcFormTab.getSelectorReport())
   ## Stop a particular record from being highlighted
   ###set($sessionRowId = -1) ## $sessionData.getRowId($gcFormTab.getTable()))
   #set($datarows = $view.getReportDataRows($selectorReport,50,$filter,true))
-	<div class="block grandchildren">
-		#set($gcFormTabTableInternalName = $gcFormTab.getTable().getInternalTableName())
-		<h1>$gcFormTab <a href="AppController.servlet?return=gui/reports_and_tables/report_data&set_table=$sessionTable.getInternalTableName()&set_report=$formTab.getSelectorReport().getInternalReportName()&set_row_id=$sessionRowId&rowidinternaltablename=$sessionTableInternalName&save_new_record=true&internaltablename=$gcFormTabTableInternalName&set_custom_table=true&tablekey=tabTable&custominternaltablename=$gcFormTabTableInternalName&cachebust=$viewTools.getRandomString()" target="pane_2"><img src="resources/toolbar/new.png" style="height: 1.3em; font-size: 9pt; vertical-align: top;"/></a></h1>
-		#if($datarows.size() > 0)
+  <div class="block grandchildren">
+	#set($gcFormTabTableInternalName = $gcFormTab.getTable().getInternalTableName())
+	<h1>$gcFormTab <a href="AppController.servlet?return=gui/reports_and_tables/report_data&set_table=$sessionTable.getInternalTableName()&set_report=$formTab.getSelectorReport().getInternalReportName()&set_row_id=$sessionRowId&rowidinternaltablename=$sessionTableInternalName&save_new_record=true&internaltablename=$gcFormTabTableInternalName&set_custom_table=true&tablekey=tabTable&custominternaltablename=$gcFormTabTableInternalName&cachebust=$viewTools.getRandomString()" target="pane_2"><img src="resources/toolbar/new.png" style="height: 1.3em; font-size: 9pt; vertical-align: top;"/></a></h1>
+	#if($datarows.size() > 0)
       ## Workaround for https://bugzilla.mozilla.org/show_bug.cgi?id=549114
-			<table style="width:100%"><tr><td style="column-break-inside: avoid;"> 
-			  #parse("gui/reports_and_tables/tabs/tab_selector_report.vm")
-		  </td></tr></table>
-	  #end
-	</div>
+	  <table style="width:100%"><tr><td style="column-break-inside: avoid;"> 
+		#parse("gui/reports_and_tables/tabs/tab_selector_report.vm")
+	  </td></tr></table>
+    #end
+  </div>
 #end
