Loading wrong grandchild: problem found by John Williams: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_grandchild_blocks.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_grandchild_blocks.vm
@@ -23,7 +23,11 @@
 #set($sessionTableInternalName = $sessionTable.getInternalTableName())
 #set($lookupRowId = true) ## Used by tab_selector_report
 #if(!$formTab)
-  <h1>Parent table is $parentTable</h1>
+  #foreach($parentFormTab in $parentTable.getFormTabs())
+    #if($parentFormTab.getTable().equals($gcParentTable))
+      #set($formTab = $parentFormTab)
+    #end
+  #end
 #end
 #foreach($gcFormTab in $gcFormTabs)
   #set($selectorReport = $gcFormTab.getSelectorReport())
