--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_head.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_head.vm
@@ -20,7 +20,7 @@
 <div id="fieldFilters" #if(!$filtersShouldBeShown) style="display:none" #end>
   #foreach($headingLevel in [1..$numHeadingLevels])
     <div class="sectioned_filter_row">
-      <span class="sectioned_filter_name">Filters: $filters. Header $headingLevel:</span>
+      <span class="sectioned_filter_name">Header $headingLevel:</span>
       ## Find the table corresponding with this heading level
       #foreach($testHeadingTable in $headingTables)
         #if($headingMap.get($testHeadingTable) == $headingLevel)
@@ -30,6 +30,7 @@
       #end
       #foreach($reportField in $sessionReport.getReportFields())
         #set($field = $reportField.getBaseField())
+        #set($fieldObject = $field) ## used in filter_input.vm
         #set($internalFieldName = $field.getInternalFieldName())
         #if($reportField.getClass().getSimpleName() == "ReportCalcFieldDefn")
           #if($headingCalcMap.get($reportField) == $headingLevel)
