Gareth's chicken filter issue: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_head.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_head.vm
@@ -31,6 +31,7 @@
       #foreach($reportField in $sessionReport.getReportFields())
         #set($field = $reportField.getBaseField())
         #set($fieldObject = $field) ## used in filter_input.vm
+		$filters.get($fieldObject) got from $filters using $fieldObject
         #set($internalFieldName = $field.getInternalFieldName())
         #if($reportField.getClass().getSimpleName() == "ReportCalcFieldDefn")
           #if($headingCalcMap.get($reportField) == $headingLevel)
