--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -245,6 +245,7 @@ table#reportData tr.rowb  {
 
 #wrapper table#reportData tr.rowb  { 
   border: 1px solid #f2f2f2;
+  border-left: 0;
 }
 
 table#reportData .trailing { 
