--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
@@ -37,7 +37,7 @@
     			    font-size: 10pt; 
     			    margin:0; 
     			    padding:0;
-    			    margin-left: 0.5em;
+    			    margin-left: 0.25em;
     			    height:100%;
     			    background-color: #F0F0F0;
     			  }
@@ -80,6 +80,7 @@
 		div#wrapper table#reportData #fieldFilters {
 		position: absolute;
 		top: 30px;
+		left: 0.25em;
 		}
 		
 		##div#wrapper table#reportData #fieldFilters td {
