Pane 2 CSS: 'architecture'

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
@@ -80,7 +80,7 @@
 		div#wrapper table#reportData #fieldFilters {
 		position: absolute;
 		top: 30px;
-		left: 0.25em;
+		left: 0;
 		}
 		
 		##div#wrapper table#reportData #fieldFilters td {
