Pane 2 CSS: 'architecture': filter row test: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
@@ -207,6 +207,7 @@
 
 	#if($browser != "Internet Explorer")
 	function alignTableHeaderCells() {
+	    console.log('align');
 		var jqFirstRowCells = $("tbody#reportBody tr:first").children("td");
 		var jqHeaderCells = $("#reportData thead tr:first").children("th");
 		var jqFilterCells = $("#fieldFilters").children("td");
