--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
@@ -224,7 +224,7 @@
 		  //jqFilterElement.css("left",left+1);
 		  i++;
 		});
-		$("#fieldFilters").css("left: 0.5em");
+		$("#fieldFilters").css("left","0.5em");
 	}
 	#end
 	
