--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
@@ -220,7 +220,7 @@
 		    jqHeaderElement.children("div:eq(0)").width(width + 6);  // 3px difference in th/td padding either side
 		  }
 		  jqFilterElement.children("div").width(width + 6);
-		  jqHeaderElement.css("left",left);
+		  jqHeaderElement.css("left",left+1);
 		  //jqFilterElement.css("left",left+1);
 		  i++;
 		});
