--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
@@ -214,6 +214,7 @@
 		jqFirstRowCells.each(function() {
 		  var width = $(this).width();
 		  var left = $(this).offset().left - 1;   // 1px border
+		  console.log(i + ": width=" + width + ", left=" + left);
 		  var jqHeaderElement = jqHeaderCells.filter(":eq(" + i + ")");
 		  var jqFilterElement = jqFilterCells.filter(":eq(" + i + ")");
 		  if (jqHeaderElement.children("div").size() > 0) {
