--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -22,6 +22,10 @@ table#reportData {
   padding-top: 6px;
 }
 
+#wrapper table#reportData th.leading {
+  border-top-left-radius: 1em;
+}
+
 table#reportData th {
   background-color: white; /* #f1f2ed; */
   font-size:8.5pt; 
