--- a/gtpb_clientside/resources/tree/tree.css
+++ b/gtpb_clientside/resources/tree/tree.css
@@ -61,6 +61,7 @@ span.notification {
   background-color: rgba(255,255,255,0.5);
   border-radius: 0.5em;
   padding: 0.25em;
+  margin-right: 0.25 em;
   -moz-transition-duration: 1800s; /* half an hour */
   -moz-transition-timing-function: ease-out;
   -moz-transition-property: opacity;
@@ -79,6 +80,7 @@ span.notification {
 span.notification.edit {
   font-size: 100%;
   color: white;
+  background-color: transparent;
   -moz-transition-duration: 60s;
   -webkit-transition-duration: 60s;
   -ms-transition-duration: 60s;
