--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
@@ -38,7 +38,7 @@
     			    margin:0; 
     			    padding:0;
     			    height:100%;
-    			    background-color: #F0F0F0;
+    			    background-color: #EEF3F9; /* light blue */
     			  }
 				 
 	      div#wrapper { 
