--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
@@ -237,10 +237,13 @@
 	  };
 	  $("#filterhelp").hoverIntent(hoverIntentConfig);
 	  $(".ab_field_title").hoverIntent(hoverIntentConfig);
+	  $("tr.sectioned_detail_row").mouseenter(function() {
+	    $("tr.sectioned_detail_heading").hide();
+	    $(this).prevAll("tr.sectioned_detail_heading").last().show();
+	  });
 	  #if($browser != "Internet Explorer")
 	    alignTableHeaderCells();
 	    setInterval("alignTableHeaderCells()", 2000);
-	  
 	    $(window).scroll(function() {
 	      var left = document.body.scrollLeft || window.pageXOffset;
 	      $("thead").css("left", -1 * left);
